ApexWorkbook/src/objects/Return_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Item</label>
        <referenceTo>Delivery_Item__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <label>Return Code</label>
        <picklist>
            <picklistValues>
                <fullName>00 - Damaged packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Spoiled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Arrived too late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - No longer needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99 - Other reason</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Return Item</label>
    <nameField>
        <displayFormat>RETURN-{00000}</displayFormat>
        <label>Return Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>